--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
+	"author": "YOUR_NAME",
 	"name": "YOUR_PROJECT_NAME",
-	"version": "1.0.0",
 	"description": "Your project description.",
+	"version": "1.0.0",
 	"scripts": {
 		"dev": "echo \"Error: no dev specified\" && exit 1",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "",
-  "dependencies": {
-    
-  }
+	"dependencies": {
+		"dotenv": "^16.4.4"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.19",
+		"eslint": "^8.56.0",
+		"typescript": "^5.3.3"
+	}
 }
